kubernetes/core/cilium/hubble-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hubble-ui-ingress
  namespace: kube-system
  annotations:
    tailscale.com/hostname: "hubble"
spec:
  ingressClassName: tailscale
  tls:
    - hosts:
        - "hubble"
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: hubble-ui
                port:
                  number: 80
